Time: 1 ms (90.32%) | Memory: 41.9 MB (32.09%) - LeetSync