@@ -1,20 +1,19 @@
 class Solution {
     public List<List<Integer>> generate(int numRows) {
         List<List<Integer>> result = new ArrayList<>();
-        result.add(Arrays.asList(1));
+        result.add(List.of(1));
         if (numRows == 1) return result;
-        numRows -= 1;
-        while(numRows-- > 0) {
-            List<Integer> last = result.get(result.size() - 1);
-            List<Integer> new_list = new ArrayList<>();
-            new_list.add(1);
-            int index = 0;
-            while(index < last.size() - 1) {
-                new_list.add(last.get(index) + last.get(index + 1));
-                index += 1;
+        result.add(List.of(1,1));
+        if (numRows == 2) return result;
+        for(int i=2; i < numRows; i++) {
+            List<Integer> prevRow = result.get(i-1);
+            List<Integer> newList = new ArrayList<>();
+            newList.add(1);
+            for(int j=0; j<prevRow.size() - 1; j++) {
+                newList.add(prevRow.get(j) + prevRow.get(j+1));
             }
-            new_list.add(1);
-            result.add(new_list);
+            newList.add(1);
+            result.add(newList);
         }
         return result;
     }
